--- a/app/views/static/privacy.html
+++ b/app/views/static/privacy.html
@@ -7,10 +7,13 @@
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<style type="text/css">
 	#content {
-		padding: 2em;
+		padding: 0em;
 		margin: 0;
-		margin-bottom: 2em;
+		margin-bottom: 5em;
+		font-size: 18px;
+		box-shadow: none !important;
 	}
+	#page{background: #fff !important;}
 	</style>
 {% endblock %}
 
