--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,6 +2,9 @@
 
 {% block head.end %}
 	{% parent %}
+	<!--fonts-->
+	<link href='//fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
+	<link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<style type="text/css">
 	#featured {
 		position: relative;
@@ -11,13 +14,6 @@
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
-	#featured, #rightbar {
-		border-radius: 10px;
-		background-color: white;
-	}
-	#rightbar {
-		padding: 1em;
-	}
 	#featured .buttons {
 		position: absolute;
 		bottom: 16px;
@@ -26,8 +22,6 @@
 	#featured a {
 		border: 0px solid white;
 		color: white;
-		background: #B51010;
-		font-family: 'Josefin Sans',sans-serif;
 		border-radius: 5px;
 		font-weight: bold;
 		padding: .75em 1em;
@@ -35,54 +29,50 @@
 		line-height: 1;
 		display: inline-block;
 	}
-	#featured a:hover {
-		text-decoration: none;
-	}
 	#featured h2 {
 		margin: 0;
 	}
 	.tabs {
-		margin-bottom: 16px;
+		margin-bottom: 0px;
+		
 	}
-	.tabs button {
+	.tabs button 
+	{
+		/*previously color: #999, backgorund#DDD*/
 		font-size: 1.2em;
 		font-weight: bold;
-		color: #777;
+		color: #CCC;
 		display: inline-block;
 		margin: 0;
 		padding: .5em;
 		line-height: 1;
-		border-radius: 4px;
-		background: #eee;
+		border-radius: 0px;
+		background: #EEE;
 		border: 0;
 		font-family: 'Josefin Sans',sans-serif;
 		transition: 300ms;
+		width: 50%;
+		height: 40px;
+		border-bottom: 1px solid #DDD;
+
 	}
 	.tabs button:hover {
-		background: #ccc;
-		color: #555;
+		opacity: 0.9;
+		color: #A55D5D;
 	}
 	.tabs button.active {
-		background: #B51010;
-		color: white;
-	}
-	.tablist a {
-		display: inline-block;
-		line-height: 1.4;
-	}
-	.tablist p {
-		margin: 0;
-		line-height: 1.4;
+		/*previously background: #B51010 color: white, overwriting box-shadow to remove inset*/
+		border-bottom: 1px solid #FFF;
+		box-shadow: inset 0 0 0px #000000;
+		background: #FFF;
+		color: #A55D5D;
 	}
 	.propcott-media {
-		margin-right: 1em;
-		float: left;
-		width: 120px;
-		height: 90px;
 		background-size: cover;
+		height:100%; background-position: center center; background-repeat: no-repeat;
+		float: left; width: 150px; margin-right: 0.5em; background-color: #333;
 	}
 	.buttons a {
-		background: #B51010;
 		color: white;
 		padding: 1em;
 		border-radius: 5px;
@@ -90,37 +80,199 @@
 	}
 	.buttons a:hover {
 		background: #901416;
+		
+	}
+	/*@andrenaught new CSS: 
+		-old colors: #B51010, #BD1417;
+		-I've mostly appended CSS, not deleted
+	*/
+	.banner
+	{
+		background: url(/images/protest-banner.png)no-repeat center top;
+		background-size: cover;
+		/*height: 49vh; this height covers half of the height of the screen device*/
+		height: 380px;
+	}
+	.bannerContent
+	{
+		height:100%;
+		position:relative;
+	}
+	.bannerContent h2
+	{
+		position:absolute;
+		bottom: 50px;
+    	width: 100%;
+	}
+	.bannerContent .btn
+	{
+		color:#FFF;
+		background: rgba(255, 255, 255, 0);
+		padding: 1em;
+		width: 12em;
+		border-radius: 0;
+		border: 0.1px solid #CCC;
+	}
+	.bannerContent .btn:hover
+	{
+		background: #A55D5D;
+		color: white;
+		opacity: 1;
+	}
+	.adsbygoogle
+	{
+		display:block; 
+		margin-top: 2em;
+	}
+	#content{box-shadow: 0px 0px 0px rgba(0,0,0,0) !important;}
+	.container-fluid.universal{padding: 0px 2.3px !important;}
+	.leftCol, .rightCol
+	{
+		padding: 0 5px 0px 5px;
+		height:680px;
+		text-align: center;
+	}
+	.colSeparator /*this is the real column that is seen by the user*/
+	{
+		background: #FFF;
+		height:inherit;
+	}
+	.leftTitle
+	{
+		padding: 15px 0 15px 0;
+		color: #2B2C2A;
+		font-family: 'Arvo',Lucida Console,sans-serif;
+		font-size: 29px;
+		font-weight: bold;	
+	}
+	.leftImage
+	{
+		padding: 31px 31px 52px 31px;
+		overflow:hidden;
+	}
+	.leftDesc
+	{
+		margin: 0;
+		padding: 2em 1em;
+		background: #2B2C2A;
+		color: #FFF;
+	}
+	.leftDesc a
+	{
+		color: #D3CFC6;
+		font-weight: normal;
 		text-decoration: none;
+	} .leftDesc a:hover{text-decoration: underline;}
+	input:focus, select:focus, textarea:focus, button:focus /*removes blue highlight when pressing a button*/
+	{outline: none;}
+	#rightbar{height: 950px;}
+	#hot-button{float:left;border-right: 1px solid #DDD;}
+	#new-button{float:right;}
+	#tabsContainer
+	{
+		height:100%;
+		box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+	}
+	#hot-tab, #new-tab
+	{padding: 1em;text-align:left;padding-bottom: 0;}
+	#hot-tab::-webkit-scrollbar, #new-tab::-webkit-scrollbar
+	{
+    	width: 0px;  /* remove scrollbar space */
+	}
+	.propcottItemFeatured
+	{
+		margin-bottom: 1em;
+		padding: 7px 1em 0em 1em;
+		height: 126px;
+		clear: both;
+		background-color: #FFF; 
+		overflow: hidden;
+		text-align: left;
+	}
+	.propcottItem
+	{
+		margin-bottom: 1em; clear: both; height: 90px; margin-right: 1em;
+	}
+	.propcottItem a, .propcottItemFeatured a
+	{
+		font-family: 'Roboto';
+		text-decoration: none;
+		color: #2B2C2A;
+		font-weight: bold;
+		font-size: 14px;
+	}
+	.propcottItem a:hover, .propcottItemFeatured a:hover
+	{
+		color: #983131;
+	}
+	.propcott-desc
+	{
+		overflow:hidden; font-size: 11px; line-height: 1.4;height:100%;
+	}
+	.viewMore {text-align: center;padding-bottom: 0em;margin-top: 1.3em;}
+	.viewMore a{color: #666;}
+	.viewMore a:hover{color: #A55D5D; text-decoration: none}
+
+	/*for laptops (heights lower than or equal to 1079px, testing for now*/
+	@media only screen and (max-device-height: 1079px)
+	{
+       	.viewMore
+       	{
+       		margin-top: 1.3em;
+       		font-size: 12px;
+       	}
+       	.leftTitle
+       	{
+       		padding: 11px 0 0px 0;
+       	}
+       	.leftImage
+       	{
+       		padding-bottom: 31px;
+       	}
+       	.leftCol, .rightCol
+       	{
+       		height: 640px;
+       	}
 	}
 	</style>
 {% endblock %}
 
 {% block hero %}
 {% autoescape false %}
-<div class="headline">
-	<div class="headline-content">
-		<div class="container">
-			<h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);margin: 1em 0 2em 0;">Unite. Abstain. <s>Boycott</s> <span style="font-family: cursive;font-style: italic;transform: rotate(-10deg) translate(-5em) translateY(0.6em);width: 0;display: inline-block;">Propcott</span></h1>
-			<!--h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);margin: 1em 0;"><div style="font-size: 1.6em;">Unite</div><div style="font-size: 1.05em;">Abstain</div><div><s>Boycott</s></div><span style="font-family: cursive;font-style: italic;transform: rotate(-10deg) translate(-1em) translateY(0.2em);width: 0;display: inline-block;font-size: 1.25em;">Propcott</span></h1-->
+<style> /*this is just a quick fix, a white background is inherited from bootstrap 'scaffolding.less:31'*/
+	body{background: #e8e8e8;}
+</style>
 
-			<p class="buttons">
-				<a href="/new">Start a Propcott</a>
-				<a href="/about">Learn More</a>
-			</p>
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-5509225747243146"
-           data-ad-slot="3860750710"
-           data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+<div class = "container-fluid" style = "padding: 0;">	
+	<div class="headline">
+		<div class="headline-content">
+			<div class = "banner">
+				<div class = "bannerContent">
+					<h2>
+						<p class="buttons">
+							<a href="/new" class = "btn">Start a Propcott</a>
+							<a href="/about" class = "btn">Learn More</a>
+						</p>
+					</h2>
+				</div>
+			</div>
+			<!--Old Banner: 
+			<h1 style="color: #BD1417; text-transform: uppercase; line-height: .8; font-size: 42px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);margin: 1em 0;"><div style="font-size: 1.6em;">Unite</div><div style="font-size: 1.05em;">Abstain</div><div><s>Boycott</s></div><span style="font-family: cursive;font-style: italic;transform: rotate(-10deg) translate(-1em) translateY(0.2em);width: 0;display: inline-block;font-size: 1.25em;">Propcott</span></h1>
+			-->
+	      	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	      	<ins class="adsbygoogle"
+	           	data-ad-client="ca-pub-5509225747243146"
+	           	data-ad-slot="3860750710"
+	           	data-ad-format="auto">
+	        </ins>
+	      	<script>
+	      		(adsbygoogle = window.adsbygoogle || []).push({});
+	      	</script>
 		</div>
 	</div>
-
 	{% if propcott.media_type %}
-	<div class="headline-background" style="background-image: url('{% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% elseif propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/hqdefault.jpg{% endif %}');"></div>
+	<div class="headline-background" style="background-image: url('{% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% elseif propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/hqdefault.jpg{% endif %}');">
+	</div>
 	{% endif %}
 </div>
 {% endautoescape %}
@@ -128,71 +280,105 @@
 
 {% block content %}
 {% autoescape false %}
-<div class="container" style="margin-top: 1em;">
-	<div class="row">
-		<div class="col-12 col-md-7">
-		  <div style="margin-bottom: 1em; padding: 1em;position:relative; background-color: white;text-align:center;overflow:hidden; margin-top: 1em; border-radius: 10px;"><h2 style="position: absolute; top: 0; left: 0; right: 0; background-color: black; margin: 0; color: white; background-color: rgba(0,0,0,0.9); padding: 0.5em;">Baby Milk Action's- "Nestle Free Zone"</h2><p style="position: absolute; font-weight: bold; bottom: 0; left: 0; right: 0; background-color: black; color: white; margin: 0; background-color: rgba(0,0,0,0.95); padding: 0.5em;">From our friends at Baby Milk Action. Check them out <a href="http://www.babymilkaction.org/" style="color: white; text-decoration: underline;">here</a> and their Facebook <a href="https://www.facebook.com/nestleboycottINBC" style="color: white; text-decoration: underline;">here</a></p><a href="https://www.facebook.com/events/1489691241358851/"><img src="http://static.propcott.com/images/nestle-free-week-feature.png"></a></div>
-			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- Home Page -->
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-5509225747243146"
-           data-ad-slot="4530231913"
-           data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+<div class= "container-fluid">
+	<div class="row" style = "background: #e8e8e8;">
+		<div class="leftCol col-12 col-md-7">
+			<div class = "colSeparator">
+				<div class = "leftTitle">
+					Baby Milk Action's - "Nestle Free Zone"
+				</div>
+			  	<div class = "leftImage">
+			  		<a href="https://www.facebook.com/events/1489691241358851/">
+			  		<img src="http://static.propcott.com/images/nestle-free-week-feature.png" style = "height: 450px;">
+			  		</a>
+			  	</div>
+			  	<p class = "leftDesc">From our friends at Baby 	Milk Action. Check them out 
+			  		<a href="http://www.babymilkaction.org/">here</a>
+			  		and their Facebook 
+			  		<a href="https://www.facebook.com/nestleboycottINBC">here</a>
+			  	</p>
+	      	</div>
 		</div>
-		<div class="col-12 col-md-5" style="vertical-align: top; padding-left: 1em;">
+
+		<div class="rightCol col-12 col-md-5"> 
 			<div id="rightbar">
 				<div class="tabs">
-					<button class="active" id="hot-button" onclick="show('hot')">Hot</button>
-					<button id="new-button" onclick="show('new')">New</button>
+					<button class="active btn" id="hot-button" onclick="show('hot')">Hot</button>
+					<button id="new-button" onclick="show('new')" class = "btn">New</button>
 				</div>
+
 				{% if featured %}
-					<div style="margin-bottom: 1em; clear: both; background-color: #eee; overflow: hidden; padding: 1em;">
+				<div id = "tabsContainer" style= "background: #FFF">
+					<div class = "propcottItemFeatured">
 						<p style="margin: 0;"><strong><small>FEATURED</small></strong></p>
-						<div class="propcott-media" style="float: left; width: 120px; height: 90px; margin-right: 0.5em; {% if featured.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ featured.media_link }}');{% elseif featured.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ featured.media_link }}/mqdefault.jpg');{% else %}background-color: #333;{% endif %}"></div>
-						<div style="overflow:hidden; font-size: .9em; line-height: 1.4;">
+						<div class="propcott-media" style="{% if featured.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ featured.media_link }}');{% elseif featured.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ featured.media_link }}/mqdefault.jpg');{% else %}{% endif %}">
+						</div>
+						<div class = "propcott-desc">
 							<a href="/p/{{ featured.slug || featured.id }}">{{ featured.title || 'Untitled' }}</a>
-							<p style="margin-top: 0.5em;">Targeting {{ featured.target }}<br>
-							<span style="color: #B51010;">{{ featured.support.all }} supporters</span></p>
+							<p style="color: #767676">Targeting {{ featured.target }}<br>
+								<span style="color: #983131; font-size: 12.6px">{{ featured.support.all }}</span> 
+								<span style = "color: #767676;">supporters</span>
+							</p>
 						</div>
+						
 					</div>
-				{% endif %}
+					<hr style = "border-color: #CCC; width: 94%; margin-top: 0;margin-bottom: 0; align:center"></hr>
 
-				<div id="new-tab" style="display: none;">
-					{% for propcott in recent %}
-						<div style="margin-bottom: 1em; clear: both;">
-							<div class="propcott-media" style="float: left; width: 120px; height: 90px; margin-right: 0.5em; {% if propcott.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ propcott.media_link }}');{% elseif propcott.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg');{% else %}background-color: #333;{% endif %}"></div>
-							<div style="overflow:hidden; font-size: .9em; line-height: 1.4;">
-								<a href="/p/{{ propcott.slug || propcott.id }}">{{ propcott.title || 'Untitled' }}</a>
-								<p style="margin-top: 0.5em;">Targeting {{ propcott.target }}<br>
-								<span style="color: #B51010;">{{ propcott.support.all }} supporters</span></p>
-							</div>
-						</div>
-					{% endfor %}
-					<p style="text-align: right;margin-bottom: 0;"><a href="/explore">View more...</a></p>
-				</div>
+					{% endif %}
 
-				<div id="hot-tab">
-					{% for propcott in hot %}
-						<div style="margin-bottom: 1em; clear: both;">
-							<div class="propcott-media" style="float: left; width: 120px; height: 90px; margin-right: 0.5em; {% if propcott.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ propcott.media_link }}');{% elseif propcott.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg');{% else %}background-color: #333;{% endif %}"></div>
-							<div style="overflow:hidden; font-size: .9em; line-height: 1.4;">
-								<a href="/p/{{ propcott.slug || propcott.id }}">{{ propcott.title || 'Untitled' }}</a>
-								<p style="margin-top: 0.5em;">Targeting {{ propcott.target }}<br>
-								<span style="color: #B51010;">{{ propcott.support.all }} supporters</span></p>
+					<div id="new-tab" style="display: none;">
+						{% for propcott in recent %}
+							<div class = "propcottItem">
+								<div class="propcott-media" style="{% if propcott.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ propcott.media_link }}');{% elseif propcott.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg');{% else %}{% endif %}">
+								</div>
+								<div class = "propcott-desc">
+									<a href="/p/{{ propcott.slug || propcott.id }}">{{ propcott.title || 'Untitled' }}</a>
+									<p style="color: #767676">Targeting {{ propcott.target }}<br>
+										<span style="color: #983131; font-size: 12.6px">{{ propcott.support.all }} </span> 
+										<span style = "color: #767676;">supporters</span>
+									</p>
+								</div>
 							</div>
-						</div>
-					{% endfor %}
-					<p style="text-align: right;margin-bottom: 0;"><a href="/explore/monthly">View more...</a></p>
+						{% endfor %}
+						<p class = "viewMore"><a href="/explore">View more...</a></p>
+					</div>
+
+					<div id="hot-tab">
+						{% for propcott in hot %}
+							<div class = "propcottItem">
+								<div class="propcott-media" style="{% if propcott.media_type == 'image' %}background-image: url('http://static.propcott.com/{{ propcott.media_link }}');{% elseif propcott.media_type == 'video' %}background-image: url('http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg');{% else %}{% endif %}">
+								</div>
+								<div class = "propcott-desc">
+									<a href="/p/{{ propcott.slug || propcott.id }}">{{ propcott.title || 'Untitled' }}</a>
+									<p style="color: #767676">Targeting {{ propcott.target }}<br>
+										<span style="color: #983131; font-size: 12.6px">{{ propcott.support.all }} </span> 
+										<span style = "color: #767676;">supporters</span>
+									</p>
+								</div>
+							</div>
+						{% endfor %}
+						<p class = "viewMore"><a href="/explore/monthly">View more...</a></p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class = "row" style = "background: #e8e8e8">
+		<div class = "col-12" style = "margin-top: 325px">
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      		<!-- Home Page -->
+      		<ins class="adsbygoogle"
+           		style="display:block;"
+           		data-ad-client="ca-pub-5509225747243146"
+           		data-ad-slot="4530231913"
+           		data-ad-format="auto">
+           	</ins>
+      		<script>
+      			(adsbygoogle = window.adsbygoogle || []).push({});
+      		</script>
+		</div>
+	</div>
 </div>
-
 <script type="text/javascript">
 var show = function(tab) {
 	document.getElementById('hot-button').className = '';
