--- a/app/views/propcott/manage.html
+++ b/app/views/propcott/manage.html
@@ -33,20 +33,22 @@
 		text-align: center;
 		float: right;
 		border: 1px solid #ddd;
-		background: #e7e7e7;
-		padding: .5em;
+		background: #A55D5D;
+		padding: 5.3px;
 		font-size: 1em;
 		line-height: 1;
+		color: #fff;font-weight: bold;font-size: 11px;padding:10.5px;border-top-right-radius: 2px;border-bottom-right-radius: 2px;
 	}
+	 button:hover{color: #333;}
 	#copy-button span {
 		font-size: 1em;
 		line-height: 1;
 	}
 	#copy-link {
 		font-size: .9em;
-		background: white;
-		padding: .5em;
-		border: 1px solid #ddd;
+		background: #eee;
+		padding: 9px;
+		border: 2px solid #ddd;
 		border-right: 0;
 		line-height: 1;
 		display: inline-block;
@@ -76,6 +78,7 @@
 		margin: 1em auto;
 		max-width :330px;
 	}
+	.sharebuttons a:hover{text-decoration: none;color: #ccc;}
 	.sharebutton {
 		border-radius:2px;
 		display:inline-block;
@@ -92,7 +95,7 @@
 		position: relative;
 	}
 	.headline-content {
-		padding: 2em;
+		padding: 15px 28px;
 		background: #111;
 		background-color: rgba(0,0,0,0.75);
 		color: white;
@@ -154,7 +157,7 @@
 		font-size: 0.8em;
 	}
 	.metric p {
-		margin: 0.5em 2.5em;
+		margin: 0.4em 0em;
 	}
 	.metric-bar, .metric-fill {
 		position: relative;
@@ -162,7 +165,9 @@
 		height: 4px;
 	}
 	.metric-fill {
-		background-color: #BD1417;
+		height: 8px;
+		margin-top: 2px;
+		border-bottom: 1px solid #8c4d4d;
 	}
 	.fb-comments {
 		margin: 1em 0;
@@ -217,6 +222,44 @@
 	#cke_propcott-new-update .cke_top {
 		background: white !important;
 		border-bottom: 1px solid #eee !important;
+	}
+
+	input:focus, select:focus, textarea:focus, button:focus{outline: none;}
+	.managePropcottBox h3{margin-bottom: 5px; font-weight: bold;font-size: 35px !important;}
+	/*banner*/
+	#propcott-title{margin: 0 0 1em 0;font-size: 25px;}
+	.banner-propcott-num{vertical-align: top;}
+	.banner-propcott-num p{line-height: 1; text-align: right; margin: 0; padding-right: 1em;color: #A55D5D;}
+	.banner-propcott-num strong{font-size: 3em;}
+	.banner-propcott-target{vertical-align: top; text-align: left;margin-top:3px;}
+	.banner-propcott-target p{margin: 0; padding-left: 1em; line-height: 1.1;border-left: 1px solid white;min-height: 3.8em;}
+	.banner-propcott-target span{padding-left: 2px;}
+	.banner-propcott-target strong{font-size: 2.7em;}
+	/*the white box*/
+	.managePropcottBox{min-height: 400px;padding-bottom: 30px;}
+	.col-md-7{padding: 0em 0em 0em 2.5em;}
+	.col-md-5{padding: .4em 1.5em 0em 3em;float: right; clear: right}
+	.col-md-7 *{font-size: 17px;}
+	.col-md-7 a{display:block;overflow: hidden;text-overflow: ellipsis;}
+	#propcott-media{margin: 0 1em;}
+	.goalCol h3{margin-top: .5em}
+	.whatCol{padding-top: 0;}
+	#propcott-how li{color: #000;} #propcott-how p{color:#A87070;} #propcott-how{padding: 0px 18px;}
+	#propcott-alt li{color: #000;} #propcott-alt p{color:#A87070;}	#propcott-alt{padding: 0px 18px;}
+	p{margin-top: 10px;}
+	/*shares and updates*/
+	.share h3{border-top: 1px solid #eee;padding-top: 0.8em;padding-bottom: 0.5em;text-align:center;}
+	#updates{margin-bottom: 25px;}
+	#copy-link{color: #777;}
+	.shareLinkButton{width: 335px;margin: 10px auto 5px auto;width: 230px}
+	.sharebuttons {margin-top: 0px;}
+	.sharebuttons a {margin: 3px 1px;}
+	/*If width is below or equal to 992px*/
+	@media(max-width: 992px)
+	{
+		.col-md-5{padding: 0 2em;} 
+		.col-md-7{padding: 0 2em;}
+		.propcottImage{padding: 0em 1em 0em 3em;margin: 1em;}
 	}
 	</style>
 {% endblock %}
@@ -314,14 +357,14 @@
 {% autoescape false %}
 <div class="headline">
 	<div class="headline-content">
-		<div class="container">
-			<h1 id="propcott-title" style="margin-top: 0;">{{ propcott.title }}</h1>
-			<div class="row" style="margin: 0; margin-top: 1em;">
-				<div class="col-6" style="vertical-align: top;">
-					<p style="line-height: 1; text-align: right; margin: 0; border-right: 1px solid white; padding-right: 1em;"><strong style="font-size: 3em;">{{ propcott.support.all }}</strong><br>propcotters</p>
+		<div class="container-fluid">
+			<h1 id="propcott-title">{{ propcott.title }}</h1>
+			<div class="row">
+				<div class="col-6 banner-propcott-num">
+					<p><strong>{{ propcott.support.all }}</strong><br>propcotters</p>
 				</div>
-				<div class="col-6" style="vertical-align: top; text-align: left;">
-					<p style="margin: 0; padding-left: 1em; line-height: 1;">propcotting<br><strong style="font-size: 3em;">{{ propcott.target }}</strong></p>
+				<div class="col-6 banner-propcott-target">
+					<p>propcotting<br><strong>{{ propcott.target }}</strong></p>
 				</div>
 			</div>
 			{% if propcott.creator %}
@@ -347,11 +390,11 @@
  
 {% block content %}
 {% autoescape false %}
-<div class="row">
-	<div class="col-12 col-md-5" style="float: right; clear: right;">
+<div class="row managePropcottBox">
+	<div class="col-12 col-md-5 propcottImage">
 		{% if propcott.media_type %}
 			{% if propcott.media_type == 'image' %}
-			<div style="text-align: center; background: #ddd"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;"></div>
+			<div style="text-align: center; background: #2B2C2A"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;"></div>
 			{% elseif propcott.media_type == 'video' %}
 			<div class="fluid-video"><div class="inner"><iframe src="https://www.youtube.com/embed/{{ propcott.media_link }}" frameborder="0" allowfullscreen></iframe></div></div>
 			{% endif %}
@@ -363,39 +406,39 @@
 		</div>
 	</div>
 	
-	<div class="col-12 col-md-7" style="padding: 0 2em;">
+	<div class="col-12 col-md-7 goalCol">
 		<h3>Goal</h3>
 		<p>{{ propcott.goal }}</p>
 	</div>
-	
+
+	<div class="col-12 col-md-7">
+		<h3>Why</h3>
+		<p>{{ propcott.why }}</p>
+	</div>
+
 	{% if propcott.how %}
-	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+	<div class="col-12 col-md-5 whatCol">
 		<h3>What to do:</h3>
 		<ul id="propcott-how">
-			{% for how in propcott.how %}<li>{{ how }}</li>{% endfor %}
+			{% for how in propcott.how %}<li><p>{{ how }}</p></li>{% endfor %}
 		</ul>
 	</div>
 	{% endif %}
 
 	{% if propcott.alt %}
-	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+	<div class="col-12 col-md-5">
 		<h3>Instead, try...</h3>
 		<ul id="propcott-alt">
-			{% for alt in propcott.alt %}<li>{{ alt }}</li>{% endfor %}
+			{% for alt in propcott.alt %}<li><p>{{ alt }}</p></li>{% endfor %}
 		</ul>
 	</div>
 	{% endif %}
-	
-	<div class="col-12 col-md-7" style="padding: 0 2em;">
-		<h3>Why</h3>
-		<p>{{ propcott.why }}</p>
-	</div>
-	
-	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+
+	<div class="col-12 col-md-5 share">
 		<h3>Share!</h3>
-		<p>
+		<p class = "shareLinkButton">
 			<span id="copy-label" class="typcn typcn-link"></span>
-			<button id="copy-button" data-clipboard-text="http://www.propcott.com/p/{{ propcott.slug }}">Copy link</button>
+			<button id="copy-button" data-clipboard-text="http://www.propcott.com/p/{{ propcott.slug }}">COPY LINK</button>
 			<span id="copy-link">http://www.propcott.com/p/{{ propcott.slug }}</span>
 		</p>
 		<p class="sharebuttons">
@@ -413,9 +456,10 @@
 
 			<a href="http://pinterest.com/pin/create/button/?url=http://www.propcott.com/p/{{ propcott.slug }}&amp;media={% if propcott.media_type == 'image' %}http://static.propcott.com/{{ propcott.media_link }}{% endif %}{% if propcott.media_type == 'video' %}http://img.youtube.com/vi/{{ propcott.media_link }}/mqdefault.jpg{% endif %}&amp;description={{ encodeURIComponent(propcott.title) }}" class="sharebutton" style="background-color:#b81621;" target="_blank">pinterest</a>
 		</p>
+		<div style = "border-bottom: 1px solid #eee;padding-top: 30px"></div>
 	</div>
-	
-	<div class="col-12 col-md-7" style="padding: 0 2em;">
+
+		<div class="col-12 col-md-7">
 		<h3 id="updates">Updates &amp; Announcements</h3>
 		<div style="border: 1px solid #eee; background: #f7f7f7; border-radius: 5px;">
 			<input type="text"
@@ -465,9 +509,10 @@
 		}
 		</script>
 
-		<h3 id="comments">Comments</h3>
+		<h3 id="comments"></h3>
 		<div class="fb-comments" data-href="http://www.propcott.com/p/{{ propcott.id }}" data-numposts="5"></div>
 	</div>
+	
 </div>
 {% endautoescape %}
 {% endblock %}
