--- a/app/views/propcott/preview.html
+++ b/app/views/propcott/preview.html
@@ -69,7 +69,7 @@
 		position: relative;
 	}
 	.headline-content {
-		padding: 2em;
+		padding: 15px 28px;
 		background: #111;
 		background-color: rgba(0,0,0,0.75);
 		color: white;
@@ -131,7 +131,7 @@
 		font-size: 0.8em;
 	}
 	.metric p {
-		margin: 0.5em 2.5em;
+		margin: 0.4em 0em;
 	}
 	.metric-bar, .metric-fill {
 		position: relative;
@@ -139,7 +139,9 @@
 		height: 4px;
 	}
 	.metric-fill {
-		background-color: #BD1417;
+		height: 8px;
+		margin-top: 2px;
+		border-bottom: 1px solid #8c4d4d;
 	}
 	.fb-comments {
 		margin: 1em 0;
@@ -147,6 +149,36 @@
 	}
 	.fb-comments, .fb-comments * {
 		width: 100% !important;
+	}
+	input:focus, select:focus, textarea:focus, button:focus{outline: none;}
+	.previewPropcottBox h3{margin-bottom: 5px; font-weight: bold;font-size: 35px !important;}
+	/*banner*/
+	#propcott-title{margin: 0 0 1em 0;font-size: 25px;}
+	.banner-propcott-num{vertical-align: top;}
+	.banner-propcott-num p{line-height: 1; text-align: right; margin: 0; padding-right: 1em;color: #A55D5D;}
+	.banner-propcott-num strong{font-size: 3em;}
+	.banner-propcott-target{vertical-align: top; text-align: left;margin-top:3px;}
+	.banner-propcott-target p{margin: 0; padding-left: 1em; line-height: 1.1;border-left: 1px solid white;min-height: 3.8em;}
+	.banner-propcott-target span{padding-left: 2px;}
+	.banner-propcott-target strong{font-size: 2.7em;}
+	/*the white box*/
+	.previewPropcottBox{min-height: 400px;padding-bottom: 30px;}
+	.col-md-7{padding: 0em 0em 0em 2.5em;}
+	.col-md-5{padding: .4em 1.5em 0em 3em;float: right; clear: right}
+	.col-md-7 *{font-size: 17px;}
+	.col-md-7 a{display:block;overflow: hidden;text-overflow: ellipsis;}
+	#propcott-media{margin: 0 1em;}
+	.goalCol h3{margin-top: .5em}
+	.whatCol{padding-top: 0;}
+	#propcott-how li{color: #000;} #propcott-how p{color:#A87070;} #propcott-how{padding: 0px 18px;}
+	#propcott-alt li{color: #000;} #propcott-alt p{color:#A87070;}	#propcott-alt{padding: 0px 18px;}
+
+	/*If width is below or equal to 992px*/
+	@media(max-width: 992px)
+	{
+		.col-md-5{padding: 0 2em;} 
+		.col-md-7{padding: 0 2em;}
+		.propcottImage{padding: 0em 1em 0em 3em;margin: 1em;}
 	}
 	</style>
 {% endblock %}
@@ -161,14 +193,14 @@
 {% autoescape false %}
 <div class="headline">
 	<div class="headline-content">
-		<div class="container">
-			<h1 id="propcott-title" style="margin-top: 0;">{{ propcott.title }}</h1>
-			<div class="row" style="margin: 0; margin-top: 1em;">
-				<div class="col-6" style="vertical-align: top;">
-					<p style="line-height: 1; text-align: right; margin: 0; border-right: 1px solid white; padding-right: 1em;"><strong style="font-size: 3em;">0</strong><br>propcotters</p>
+		<div class="container-fluid">
+			<h1 id="propcott-title">{{ propcott.title }}</h1>
+			<div class="row">
+				<div class="col-6 banner-propcott-num">
+					<p><strong>{{ propcott.support.all }}</strong><br>propcotters</p>
 				</div>
-				<div class="col-6" style="vertical-align: top; text-align: left;">
-					<p style="margin: 0; padding-left: 1em; line-height: 1;">propcotting<br><strong style="font-size: 3em;">{{ propcott.target }}</strong></p>
+				<div class="col-6 banner-propcott-target">
+					<p>propcotting<br><strong>{{ propcott.target }}</strong></p>
 				</div>
 			</div>
 			{% if propcott.creator %}
@@ -194,44 +226,46 @@
 
 {% block content %}
 {% autoescape false %}
-<div class="row">
-	<div class="col-12 col-md-5" style="float: right; clear: right;">
+<div class="row previewPropcottBox">
+	<div class="col-12 col-md-5 propcottImage" style="float: right; clear: right;">
 		{% if propcott.media_type %}
 			{% if propcott.media_type == 'image' %}
-			<div style="text-align: center; background: #ddd"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;"></div>
+			<div style="text-align: center; background: #111;"><img src="http://static.propcott.com/{{ propcott.media_link }}" style="max-width: 100%; max-height: 250px; vertical-align: top;border-radius: 2px"></div>
 			{% elseif propcott.media_type == 'video' %}
 			<div class="fluid-video"><div class="inner"><iframe src="https://www.youtube.com/embed/{{ propcott.media_link }}" frameborder="0" allowfullscreen></iframe></div></div>
 			{% endif %}
 		{% endif %}
 	</div>
 	
-	<div class="col-12 col-md-7" style="padding: 0 2em;">
+	<div class="col-12 col-md-7 goalCol">
 		<h3>Goal</h3>
 		<p>{{ propcott.goal }}</p>
 	</div>
-	
+
+	<div class="col-12 col-md-7">
+		<h3>Why</h3>
+		{{ propcott.why }}
+	</div>
+
 	{% if propcott.how %}
-	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+	<div class="col-12 col-md-5 whatCol">
 		<h3>What to do:</h3>
 		<ul id="propcott-how">
-			{% for how in propcott.how %}<li>{{ how }}</li>{% endfor %}
+			{% for how in propcott.how %}<li><p>{{ how }}</p></li>{% endfor %}
 		</ul>
 	</div>
 	{% endif %}
 
 	{% if propcott.alt %}
-	<div class="col-12 col-md-5" style="padding: 0 2em; float: right; clear: right">
+	<div class="col-12 col-md-5">
 		<h3>Instead, try...</h3>
 		<ul id="propcott-alt">
-			{% for alt in propcott.alt %}<li>{{ alt }}</li>{% endfor %}
+			{% for alt in propcott.alt %}<li><p>{{ alt }}</p></li>{% endfor %}
 		</ul>
 	</div>
 	{% endif %}
 	
-	<div class="col-12 col-md-7" style="padding: 0 2em;">
-		<h3>Why</h3>
-		<p>{{ propcott.why }}</p>
-	</div>
+	
 </div>
 {% endautoescape %}
 {% endblock %}
