--- a/app/views/static/contact.html
+++ b/app/views/static/contact.html
@@ -10,31 +10,93 @@
 		text-align: center;
 	}
 	#content {
-		padding: 0;
+		padding: 13px 25px 30px 25px;
 		display: inline-block;
 		text-align: left;
 		margin: 0;
 		margin-bottom: 2em;
-		max-width: 500px;
+		border-radius: 3px;
+		max-width: 525px;
 	}
 	#content input,
 	#content textarea,
-	#content select,
-	#content button {
-		padding: 1em;
+	#content select {
 		width: 100%;
 		border: 0;
 		border-bottom: 1px solid #ccc;
 		vertical-align: top;
+		font-size: 14px;
+		border-radius: 3px;
 	}
 	#content button {
-		background: #eee;
+		background: #A55D5D;
 		transition: 300ms;
+		width: 100%;
+		padding: 15px;
+		color: white;
+		border-color: #999;
+		box-shadow: 0px 0px 10px 2px rgba(0,0,0, 0.1);
 	}
 	#content button:hover {
-		background: #ddd;
+		background: #8c4d4d;
+	}
+	input:focus, select:focus, textarea:focus, button:focus{outline: none;}
+	#content input
+	{
+		padding: 15px 15px 15px 3px;
+		border-bottom: 1px solid #bbb;
+		margin: 5px auto;
+		height: 35px;
+		background: white;
+	}
+	#content input:focus
+	{
+		border-bottom: 1px solid #A55D5D !important;
+	}
+	.hackyDivSeparator
+	{
+		border-top: 10px solid #ddd;
+		width: 150%;
+		margin: 10px 0px 0px -60px;
+	}
+	#content .subject
+	{
+		border: 1px solid #bbb;
+		padding: 15px 15px 15px 8px;
+	}
+	#content select
+	{
+		margin: 30px auto 15px auto;
+		padding: 2px;
+		height: 35px;
+		background: white;
+		border: 0.2px solid #bbb;
+	}
+	#content .subject:focus, select:focus
+	{
+		border: 1px solid #A55D5D !important;
+		box-shadow: none !important;
+	}
+	#content textarea
+	{
+		margin: 15px 0px 1px 0px;
+		border: 1px solid #bbb;
+		padding: 5px 15px 15px 8px;
+		max-width: 100%;
+	}
+	#captchaContainer
+	{
+		margin: 0 auto;
+		width: 100%;
+		padding: 15px 0px 14px 0px;
+	}
+	.g-recaptcha /*centers the captcha*/
+	{
+		-webkit-transform:scale(0.77);
+		transform-origin: 98%;
 	}
 	</style>
+
 {% endblock %}
 
 {% block hero %}
@@ -48,10 +110,12 @@
 {% endblock %}
 
 {% block content %}
-<form action="/contact" method="POST">
+<div class = "row">
+<form action="/contact" method="POST" style = "margin: 5px 20px">
 	<input type="text" name="name" placeholder="Name" required>
 	<input type="email" name="email" placeholder="Email" required>
-	<input type="text" name="organization" placeholder="Organization (optional)">
+	<input type="text" name="organization" placeholder="Organization (optional)" style = "margin-bottom: 25px">
+	<div class = "hackyDivSeparator"></div>
 	<select name="reason" required>
 		<option value="" hidden selected>Reason for contacting</option>
 		<option value="support">General Help and Support</option>
@@ -60,25 +124,29 @@
 		<option value="advertise">Advertise</option>
 		<option value="support">Other</option>
 	</select>
-	<input type="text" name="subject" placeholder="Subject" required>
+	<input class = "subject" type="text" name="subject" placeholder="Subject" required>
 	<textarea name="message" rows="8" placeholder="Message" required></textarea>
 
-	<div class="g-recaptcha" data-sitekey="6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"></div>
-	<noscript>
-		<iframe src="https://www.google.com/recaptcha/api/fallback?k=6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"
-			frameborder="0" scrolling="no"
-			style="width: 302px; height:423px; border-style: none; margin-bottom: .25em;">
-		</iframe>
-		<div style="width: 302px; height: 60px; border-style: none; bottom: 12px; left: 25px; margin-bottom: 1em; padding: 0px; right: 25px; background: #f9f9f9; border: 1px solid #c1c1c1; border-radius: 3px;">
-			<textarea id="g-recaptcha-response" name="g-recaptcha-response"
-				class="g-recaptcha-response"
-				style="width: 250px; height: 40px; border: 1px solid #c1c1c1;
-				margin: 10px 25px; padding: 0px; resize: none;">
-			</textarea>
+	<div id = "captchaContainer">
+		<div class="g-recaptcha" data-sitekey="6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D">
 		</div>
-	</noscript>
-	
+		<noscript>
+			<iframe src="https://www.google.com/recaptcha/api/fallback?k=6Lf7aQkTAAAAAFNIggrxOMkz7cdqoUlCTRImBt6D"
+				frameborder="0" scrolling="no"
+				style="width: 302px; height:423px; border-style: none; margin-bottom: .25em;">
+			</iframe>
+			<div style="width: 302px; height: 60px; border-style: none; bottom: 12px; left: 25px; margin-bottom: 1em; padding: 0px; right: 25px; background: #f9f9f9; border: 1px solid #c1c1c1; border-radius: 3px;">
+				<textarea id="g-recaptcha-response" name="g-recaptcha-response"
+					class="g-recaptcha-response"
+					style="width: 250px; height: 40px; border: 1px solid #c1c1c1;
+					margin: 10px 25px; padding: 0px; resize: none;">
+				</textarea>
+			</div>
+		</noscript>
+	</div>
+
 	{{ csrf_input() }}
-	<button type="submit">Send</button>
+	<button type="submit" class = "btn" style = "font-size: 20px;padding: 10px">Send</button>
 </form>
+</div>
 {% endblock %}
