--- a/app/views/static/creator-tips.html
+++ b/app/views/static/creator-tips.html
@@ -7,9 +7,10 @@
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<style type="text/css">
 	#content {
-		padding: 1em 2em;
+		padding: 1em 3em 3em 3em;
 		margin: 0;
 		margin-bottom: 2em;
+		font-size: 18px;
 	}
 	</style>
 {% endblock %}
@@ -25,9 +26,9 @@
 {% endblock %}
 
 {% block actions %}
-<li><a href="/about">About<br>Propcott</a></li>
-<li><a href="/creator-tips">Tips for<br>Propcott Creators</a></li>
-<li><a href="/supporter-tips">Tips for<br>Propcotters</a></li>
+<li><a href="/about"><span style = "font-size: 11.5px;color: #eee">About</span><br> Propcott</a></li>
+<li><a href="/creator-tips"><span style = "font-size: 11.5px;color: #eee">Tips for</span><br>Propcott Creators</a></li>
+<li><a href="/supporter-tips"><span style = "font-size: 11.5px;color: #eee">Tips for</span><br>Propcotters</a></li>
 {% endblock %}
 
 {% block content %}
